dropshot/tests/fail/bad_server_channel11.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
 --> tests/fail/bad_server_channel11.rs:9:7
  |
9 | trait MyServer {
  |       ^^^^^^^^

error: endpoint `bad_no_result` must return a Result
  --> tests/fail/bad_server_channel11.rs:16:5
   |
16 | /     async fn bad_no_result(
17 | |         _rqctx: RequestContext<Self::Context>,
18 | |         _upgraded: WebsocketConnection,
19 | |     );
   | |_____^
